--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
+:root {
+  --ff-primary: 'Montserrat', sans-serif;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  --fw-reg: 400;
+  --fw-bold:700;
+  --fw-extra-bold: 900;
+
+  --clr-light: #fff;
+  --clr-light-background: #ECEEEE;
+  --clr-dark: #000;
+  --clr-dark-grey:#262626;
+  --clr-grey: #383838;
+  --clr-yellow: #FFC812;
+  --clr-orange:#FAB23D;
+
+
+  --fs-h1: 3rem;
+  --fs-h2: 2.25rem;
+  --fs-h3: 1.75rem;
+  --fs-h4: 1.50rem;
+  --fs-body: 1rem;
+
+  --bs: 8px 8px #fdc500;
+  --bs-soft: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+  --radius: 0.25rem;
+  --radius-larger: 0.85rem;
+
+  --transition: all 0.3s linear;
+
+}
+@media (min-width: 880px) {
+  :root {
+    --fs-h1: 4.5rem;
+    --fs-h2: 3.75rem;
+    --fs-h3: 2.75rem;
+    --fs-h4: 1.75rem;
+    --fs-body: 1.125rem;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/****************************General Styles*******************************/
+html {
+  scroll-behavior: smooth;
+  height: 100%;
 }
-
-.App-link {
-  color: #61dafb;
+body {
+  background: var(--clr-light-background);
+  color: var(--clr-dark);
+  margin: 0;
+  font-family: var(--ff-primary);
+  font-size: var(--fs-body);
+  line-height: 1.6;
 }
+img {
+  max-width: 100%;
+}
+strong {
+  font-weight: var(--fw-bold);
+}
+.btn {
+  background-color: var(--clr-yellow);
+  border-radius: var(--radius-larger);
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-h4);
+  padding: 0.75rem 2.25rem;
+  transition: var(--transition);
+  border: none;
+  color: var(--clr-light);
+}
+.btn:hover {
+  transform: scale(1.1);
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.btn-smaller {
+  background-color: var(--clr-yellow);
+  border-radius: var(--radius-larger);
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-h4);
+  padding: 0.35rem 1rem;
+  transition: var(--transition);
+  border: none;
+  color: var(--clr-light);
+}
+.btn-smaller:hover {
+  transform: scale(1.1);
+
+}
+/**************************** Typography *******************************/
+
+h1,
+h2,
+h3 {
+  line-height: 1.6;
+  margin: 0;
+}
+h1 {
+  font-size: var(--fs-h1);
+}
+h2 {
+  font-size: var(--fs-h2);
+}
+h3 {
+  font-size: var(--fs-h3);
+}
+h4 {
+  font-size: var(--fs-h4);
 }
