--- a/src/Component/SearchBar.css
+++ b/src/Component/SearchBar.css
@@ -1,10 +1,12 @@
 .searchbar-container {
 
     width: 90%;
-    margin: 1rem auto;
+    margin: 0.15rem auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+
 }
 .searchbar-container form {
     width: 100%;
@@ -18,13 +20,13 @@ label {
 }
 input {
     width: 100%;
-    border: 2px solid var(--clr-blue);
+    border: none;
     padding: 1rem 3rem;
 }
 .search-btn {
     margin-left: 0.5rem;
     border: 1px solid var(--clr-dark);
-    background-color: var(--clr-pink);
+    background-color: transparent;
     color: var(--clr-light);
     font-size: var(--fs-h4);
     border-radius: var(--radius);
